<resources>
    <string name="app_name">Previsao_do_tempo</string>
    <string name="login">Login</string>
    <string name="senha">Senha</string>
    <string name="botao">Botão</string>
    <string name="entrar">Entrar</string>
    <string name="email">Email</string>
    <string name="senha_invalida">Senha inválida</string>
    <string name="email_invalido">Email inválido</string>
    <string name="tela_de_cadastro">Tela de Cadastro</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="ainda_nao_tem_cadastro">Ainda não tem cadastro? </string>
    <string name="cadastre_se"> Cadastre-se</string>
    <string name="o_campo_email_nao_pode_estar_vazio">O campo Email não pode estar vazio</string>
    <string name="confirmar_senha">Confirmar Senha</string>
    <string name="senhas_diferentes">Senhas diferentes!</string>
</resources>